--- a/index.html
+++ b/index.html
@@ -117,6 +117,6 @@
       </button>
     </main>
 
-    <script src="src/js/index.js"></script>
+    <script src="./src/js/index.js"></script>
   </body>
 </html>
